    than 150 items.
 9. Make Podcast HTTP requests via Perl side to avoid CORS errors.
10. Don't hard-code list of podcast providers, read from JSON resource file.
11. Tweak UI a little; remove shadows, define a set of colours to allow easier
    customisation, use Roboto Mono for monospace font.
12. Add black theme.
13. Fade in/out now-playing cover image when track changes.

1.3.2
-----
 1. If items are selected, then toggle selection of item when clicking on
    subtitle.
 2. Fix podcast search listing.
 3. Fix deleting first podcast.
 4. Don't show list with just 'Empty'
 5. Fix iOS 'Voice Over' for 'Next' button in now-playing portrait view.
 6. Fix 'Menu' tooltip for some list items.
 7. Store last podcast provider (used in search) in local storage.
 8. Set mini-player to be 620px wide, so as to fix display with epiphany.
 9. Remove ratings stars from title when showing play queue track info.
10. When clicking on an artist in the queue, check for artist_id, artist_ids,
    trackartist_id, trackartist_ids, albumartist_id, albumartist_ids in that
    order.
11. When clicking on an artist in the queue, always ask for albums by using
    the chosen ID and no role filter.

1.3.1
-----
1. Remove right-hand border from jumplist, resolves issue with epiphany.
   (Issue #213)
2. Serve web-app manifest as application/manifest+json
3. Fix setting of volume step.
4. Add tooltip to 'Stop' button.
5. Don't show notification with 'Empty'
6. Show artist, album, and cover-art in track search listing.

1.3.0
-----
 1. Add 'Move selection here' to context menu allowing items to be moved on
    iPhone and mobile Firefox.
 2. Add 'Play next' to search header context menus.
 3. List all genres in 'Randmom Mix' dialog.
 4. Display currently selected library in 'Random Mix' dialog.
 5. Add continuous play, upcomming track, and historic track options to
    'Random Mix' dialog.
 6. Add support for showing icons in grid.