@@ -1,0 +1,11 @@
+/**
+ * LMS-Material
+ *
+ * Copyright (c) 2018-2020 Craig Drummond <craig.p.drummond@gmail.com>
+ * MIT license.
+ */
+
+:root {
+ --primary-color:#1976d2;
+ --accent-color:#82b1ff;
+}
