@@ -1,0 +1,11 @@
+/**
+ * LMS-Material
+ *
+ * Copyright (c) 2018-2020 Craig Drummond <craig.p.drummond@gmail.com>
+ * MIT license.
+ */
+
+:root {
+ --primary-color:#2e7d32;
+ --accent-color:#60ad5e;
+}
