@@ -1,0 +1,11 @@
+/**
+ * LMS-Material
+ *
+ * Copyright (c) 2018-2020 Craig Drummond <craig.p.drummond@gmail.com>
+ * MIT license.
+ */
+
+:root {
+ --primary-color:#616161;
+ --accent-color:#8e8e8e;
+}
