@@ -1,0 +1,11 @@
+/**
+ * LMS-Material
+ *
+ * Copyright (c) 2018-2020 Craig Drummond <craig.p.drummond@gmail.com>
+ * MIT license.
+ */
+
+:root {
+ --primary-color:#6a1b9a;
+ --accent-color:#9c4dcc;
+}
