@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <title>Logitech Media Server</title>
   <link href="html/css/dark.css?r=[% material_revision %]" rel="stylesheet" id="variantcss"> 
+  <link href="html/css/blue.css?r=[% material_revision %]" rel="stylesheet" id="colorcss">
   <link href="html/font/font.css?r=49" rel="stylesheet">
   <link href="html/lib/vuetify.min.css?r=1.5.16" rel="stylesheet">
   <link href="html/lib/vue-virtual-scroller.css?r=1.0.0-rc2" rel="stylesheet">
