@@ -12,10 +12,14 @@
 	<link rel="stylesheet" type="text/css" href="[% webroot %]mobile.css"/>
 [% END %]
 <script>
- var val = window.localStorage.getItem("lms-material::theme");
- if ('light'!=val && undefined!=val) {
-  document.querySelector("link[href='[% webroot %]html/css/light.css?r=[% revision %]']").href = "[% webroot %]html/css/"+val+".css?r=[% revision %]";
+ let theme = window.localStorage.getItem("lms-material::theme");
+ if ('light'!=theme && undefined!=theme) {
+  document.querySelector("link[href='[% webroot %]html/css/light.css?r=[% revision %]']").href = "[% webroot %]html/css/"+theme+".css?r=[% revision %]";
   document.querySelector("link[href='[% webroot %]html/css/classic-skin-mods-light.css?r=[% revision %]']").href = "[% webroot %]html/css/classic-skin-mods-dark.css?r=[% revision %]";
+ }
+ let col = window.localStorage.getItem("lms-material::color");
+ if ('blue'!=col && undefined!=col) {
+  document.querySelector("link[href='[% webroot %]html/css/blue.css?r=[% revision %]']").href = "[% webroot %]html/css/"+col+".css?r=[% revision %]";
  }
 </script>
 
